--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>
               REIKI ,THE ONLY TECHNIQE THAT HEAL EVERYTHING
             </p>
-            <a href="#service" class="site-btn">discover</a>
+            <a href="#about" class="site-btn">discover</a>
           </div>
         </div>
         <img src="img/logo3.svg" class="hero-img" alt="" />
@@ -90,7 +90,7 @@
           </div>
           <div class="col-lg-10">
             <p>
-              Shatakshi reiki center enlightening souls by spreading the
+              Shatakshi Healing Destination enlightening souls by spreading the
               knowledge of healing therapy to masses. Taking people to higher
               dimensions of spiritual energy so as to empower them to cure their
               sufferings. when you realize the ultimate truth of life. Thousands
@@ -334,18 +334,18 @@
       </div>
     </section> -->
 
-    <div class="contact-section">
-      <div class="map-warp">
+    <div class="contact-section set-bg" data-setbg="img/testimonial-bg.png">
+      <!-- <div class="map-warp">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522"
           style="border:0"
           allowfullscreen
         ></iframe>
-      </div>
+      </div> -->
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-6 offset-lg-6">
-            <div class="contact-box contact-text">
+            <div class="contact-box text-white contact-text">
               <div class="sp-title">
                 <span>Begginer & Advanced</span>
                 <h4>Meditation Sessions</h4>
@@ -358,7 +358,7 @@
                 primis in faucibus.
               </p>
               <h6>Information</h6>
-              <ul>
+              <ul class="text-white">
                 <li>Main Str, no 23, New York</li>
                 <li>+546 990221 123</li>
                 <li>
