--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Yoga, html" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="./flower.png" rel="icon" type="x-icon"/>
+  <link href="./flower.png" rel="icon" type="x-icon" />
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet" />
@@ -55,9 +55,9 @@
           <!-- <h2>Find your inner <span>CHI</span></h2> -->
           <h2><span>Shatakshi Healing Destination</span></h2>
           <p>
-            REIKI ,THE ONLY TECHNIQE THAT HEAL EVERYTHING
+            A place of holistic healing
           </p>
-          <a href="#about" class="site-btn">discover</a>
+          <!-- <a href="#about" class="site-btn">discover</a> -->
         </div>
       </div>
       <img src="img/logo3.svg" class="hero-img" alt="" />
@@ -78,7 +78,7 @@
             Shatakshi Healing Destination enlightening souls by spreading the
             knowledge of healing therapy to masses. Taking people to higher
             dimensions of spiritual energy so as to empower them to cure their
-            sufferings. when you realize the ultimate truth of life. Thousands
+            sufferings. When you realize the ultimate truth of life, Thousands
             of candles can be lighted from a single candle and the life of the
             candle will never be shortened. Happiness never decreases by being
             shared.
@@ -105,14 +105,7 @@
               <h3>How we serve</h3>
             </div>
             <p>
-              Etiam pretium, nibh vitae varius ultricies, tellus diam gravida
-              elit, vel rhoncus eros eros sit amet ipsum. Cras cursus
-              pellentesque tortor. Ut pellentesque auctor lorem, at maximus
-              lacus faucibus nec. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Mauris auctor nunc non nulla euismod
-              consequat. Pellentesque non mattis nulla. Fusce quis tempor
-              risus, non elementum dui. Curabitur et mattis ex, a ultrices
-              lorem.
+              
             </p>
             <a href="#" class="site-btn">discover</a>
           </div>
@@ -121,7 +114,7 @@
     </div>
   </section>
 
-  <section class="courses-section">
+  <section id="services"  class="courses-section">
     <div class="container">
       <div class="sp-title text-center">
         <h3>Our Services</h3>
@@ -135,7 +128,8 @@
             <span>Begginer & Advanced</span>
             <h4>Reiki</h4>
             <p>
-              Reiki is a technique for stress reduction and relaxation that promotes healing. It is based on the idea that an unseen "life force energy" flows
+              Reiki is a technique for stress reduction and relaxation that promotes healing. It is based on the idea
+              that an unseen "life force energy" flows
               through us and is what causes us to be alive.
             </p>
             <br>
@@ -376,35 +370,30 @@
 
 
 
-  <div class="contact-section set-bg" data-setbg="img/testimonial-bg.png">
-    <!-- <div class="map-warp">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522"
-          style="border:0"
-          allowfullscreen
-        ></iframe>
-      </div> -->
+  <div class="contact-section set-bg" id="contact" data-setbg="img/testimonial-bg.png">
+    <div class="map-warp">
+      <iframe
+        src="https://www.google.com/maps/embed/v1/place?q=Mall%20Rd%2C%20next%20to%20Shanti%20Gopal%20Hospital%2C%20Judges%20Enclave%2C%20Ahinsa%20Khand%202%2C%20Indirapuram%2C%20Ghaziabad%2C%20Uttar%20Pradesh%20201014%2C%20India&key=AIzaSyBC5a3_ByMcHUm1vJUfC-TZjEZ61fXz5DA"
+        style="border:0" allowfullscreen></iframe>
+    </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 offset-lg-6">
           <div class="contact-box contact-text">
             <div class="sp-title">
-              <h4>Meditation Sessions</h4>
+              <h4>Contact us</h4>
             </div>
+            <h5>We'd love to hear from you!</h5>
             <p class="text-white">
-              Etiam pretium, nibh vitae varius ultricies, tellus diam gravida
-              elit, vel rhoncus eros eros sit amet ipsum. Cras cursus
-              pellentesque tortor. Ut pellentesque auctor lorem, at maximus
-              lacus faucibus nec. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus.
+              Whether you have a question about Reiki, Angel Healing, Tarot Card Reading, or anything else we are ready to answer all your questions.
+              Contact us to enquire about our services.
             </p>
             <h6>Information</h6>
             <ul class="text-white">
-              <li>Main Str, no 23, New York</li>
-              <li>+546 990221 123</li>
+              <li>Mall Rd, next to Shanti Gopal Hospital, Judges Enclave, <br> Ahinsa Khand 2, Indirapuram, Ghaziabad, <br> Uttar Pradesh 201014</li>
+              <li>+91 8368145193</li>
               <li>
-                <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="4820273b3c21262f082b27263c292b3c662b2725">[email&#160;protected]</a>
+                <a href="/cdn-cgi/l/email-protection" class="__cf_email__"></a>
               </li>
             </ul>
           </div>
