--- a/services/angel.html
+++ b/services/angel.html
@@ -95,7 +95,7 @@
 
         </div>
       </div>
-    </div>
+  </div>
   </section>
 
 
@@ -144,7 +144,8 @@
           <li><span class="fs16lh1-5">Angel Card Reading<br></span></li>
         </ul>
       </div>
-    </div>
+    <a href="#" id="registerBtn" class="register-btn">Join</a>
+  </div>
   </section>
 
   <section id="serviceInfo" class="service-info-section">
@@ -198,41 +199,36 @@
           <li><span class="fs16lh1-5">Angel Card Reading<br></span></li>
         </ul>
       </div>
-    </div>
+    <a href="#" id="registerBtn" class="register-btn">Join</a>
+  </div>
   </section>
 
 
 
-
-  <div class="contact-section set-bg" data-setbg="../img/testimonial-bg.png">
-    <!-- <div class="map-warp">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522"
-      style="border:0"
-      allowfullscreen
-    ></iframe>
-  </div> -->
+  <div class="contact-section set-bg" id="contact" data-setbg="../img/testimonial-bg.png">
+    <div class="map-warp">
+      <iframe
+        src="https://www.google.com/maps/embed/v1/place?q=Mall%20Rd%2C%20next%20to%20Shanti%20Gopal%20Hospital%2C%20Judges%20Enclave%2C%20Ahinsa%20Khand%202%2C%20Indirapuram%2C%20Ghaziabad%2C%20Uttar%20Pradesh%20201014%2C%20India&key=AIzaSyBC5a3_ByMcHUm1vJUfC-TZjEZ61fXz5DA"
+        style="border:0" allowfullscreen></iframe>
+    </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-6 offset-lg-6">
           <div class="contact-box contact-text">
             <div class="sp-title">
-              <h4>Meditation Sessions</h4>
+              <h4>Contact us</h4>
             </div>
+            <h5>We'd love to hear from you!</h5>
             <p class="text-white">
-              Etiam pretium, nibh vitae varius ultricies, tellus diam gravida
-              elit, vel rhoncus eros eros sit amet ipsum. Cras cursus
-              pellentesque tortor. Ut pellentesque auctor lorem, at maximus
-              lacus faucibus nec. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus.
+              Whether you have a question about Reiki, Angel Healing, Tarot Card Reading, or anything else we are ready to answer all your questions.
+              Contact us to enquire about our services.
             </p>
             <h6>Information</h6>
             <ul class="text-white">
-              <li>Main Str, no 23, New York</li>
-              <li>+546 990221 123</li>
+              <li>Mall Rd, next to Shanti Gopal Hospital, Judges Enclave, <br> Ahinsa Khand 2, Indirapuram, Ghaziabad, <br> Uttar Pradesh 201014</li>
+              <li>+91 8368145193</li>
               <li>
-                <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                  data-cfemail="4820273b3c21262f082b27263c292b3c662b2725">[email&#160;protected]</a>
+                <a href="/cdn-cgi/l/email-protection" class="__cf_email__"></a>
               </li>
             </ul>
           </div>
