--- a/services/tarot.html
+++ b/services/tarot.html
@@ -109,145 +109,47 @@
     <section id="serviceInfo" class="service-info-section">
         <div class="container">
             <div id="serviceTitle" class="sp-title">
-                <h3>This comprehensive and powerful course will teach you how to ask and accept help from angels.</h3>
+                <h3>Need an answer and advice on something? Contact us to book an appointment for your Tarot Card Reading.</h3>
+    <a href="#" id="registerBtn" class="register-btn">Book</a>
+
             </div>
         </div>
     </section>
 
-    <section id="serviceInfo" class="service-info-section">
-        <div class="container">
-            <div id="serviceTitle" class="sp-title">
-                <h3>Basic Level :</h3>
-            </div>
-            <div id="service-detail">
-                <ul>
-                    <li><span class="fs16lh1-5">What is Angels?<br></span></li>
-                    <li><span class="fs16lh1-5">What is an Angel Therapy?<br></span></li>
-                    <li><span class="fs16lh1-5">What is Angel Healing?<br></span></li>
-                    <li><span class="fs16lh1-5">Help from the Angels<br></span></li>
-                    <li><span class="fs16lh1-5">What do Angels look like?<br></span></li>
-                    <li><span class="fs16lh1-5">Your Angels are Always with You<br></span></li>
-                    <li><span class="fs16lh1-5">Your Angels Want to Help You<br></span></li>
-                    <li><span class="fs16lh1-5">Your Angels have the Ability to Help You<br></span></li>
-                    <li><span class="fs16lh1-5">The Nine Choirs of Angels<br></span></li>
-                    <li><span class="fs16lh1-5">Calling all Angel<br></span></li>
-                    <li><span class="fs16lh1-5">Introductions to Archangels<br></span></li>
-                    <li><span class="fs16lh1-5">Identifying the Archangels<br></span></li>
-                    <li><span class="fs16lh1-5">Interacting with Archangels<br></span></li>
-                    <li><span class="fs16lh1-5">The Archangels in Sacred Texts<br></span></li>
-                    <li><span class="fs16lh1-5">How Many Archangels Are There?<br></span></li>
-                    <li><span class="fs16lh1-5">Your Guardian Angels’ Name<br></span></li>
-                    <li><span class="fs16lh1-5">Talking with Angels<br></span></li>
-                    <li><span class="fs16lh1-5">Handling and Healing Ego-Based Fears<br></span></li>
-                    <li><span class="fs16lh1-5">The Four "Clairs"<br></span></li>
-                    <li><span class="fs16lh1-5">What’s Your "Primary Clair"?<br></span></li>
-                    <li><span class="fs16lh1-5">Clearing Your Clairs<br></span></li>
-                    <li><span class="fs16lh1-5">What is Angle Prayer?<br></span></li>
-                    <li><span class="fs16lh1-5">Prayers to Specific Angels<br></span></li>
-                    <li><span class="fs16lh1-5">Benefits of Angelic Guidance<br></span></li>
-                    <li><span class="fs16lh1-5">Steps to making communication with the Angels in reality<br></span></li>
-                    <li><span class="fs16lh1-5">My Angel Guidance Manifesto<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Communication and Wealth<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Card Reading<br></span></li>
-                </ul>
-            </div>
+    
+
+
+    <div class="contact-section set-bg" id="contact" data-setbg="../img/testimonial-bg.png">
+        <div class="map-warp">
+          <iframe
+            src="https://www.google.com/maps/embed/v1/place?q=Mall%20Rd%2C%20next%20to%20Shanti%20Gopal%20Hospital%2C%20Judges%20Enclave%2C%20Ahinsa%20Khand%202%2C%20Indirapuram%2C%20Ghaziabad%2C%20Uttar%20Pradesh%20201014%2C%20India&key=AIzaSyBC5a3_ByMcHUm1vJUfC-TZjEZ61fXz5DA"
+            style="border:0" allowfullscreen></iframe>
         </div>
-    </section>
-
-    <section id="serviceInfo" class="service-info-section">
-        <div class="container">
-            <div id="serviceTitle" class="sp-title">
-                <h3>Advance Level :</h3>
-            </div>
-            <div id="service-detail">
-                <ul>
-                    <li><span class="fs16lh1-5">Angelic Guidance is Free<br></span></li>
-                    <li><span class="fs16lh1-5">You Are Entitled to Your Angels’ Help<br></span></li>
-                    <li><span class="fs16lh1-5">Angelic Guidance is Always Good for You in Some Way<br></span></li>
-                    <li><span class="fs16lh1-5">The Angels Want for You What You Want for You<br></span></li>
-                    <li><span class="fs16lh1-5">The Angel Reiki System<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Reiki Prayer/ Healing Session<br></span></li>
-                    <li><span class="fs16lh1-5">Angelic Attunement<br></span></li>
-                    <li><span class="fs16lh1-5">The Attunement Process<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Communication<br></span></li>
-                    <li><span class="fs16lh1-5">Connecting with your Angel<br></span></li>
-                    <li><span class="fs16lh1-5">Clairvoyance or Clear Seeing<br></span></li>
-                    <li><span class="fs16lh1-5">Clairsentience or Clear Feeling<br></span></li>
-                    <li><span class="fs16lh1-5">Claircognizance, or Clear Thinking<br></span></li>
-                    <li><span class="fs16lh1-5">Clairaudience or Clear Hearing<br></span></li>
-                    <li><span class="fs16lh1-5">Signs from Angels<br></span></li>
-                    <li><span class="fs16lh1-5">Angelic Protection<br></span></li>
-                    <li><span class="fs16lh1-5">Angels help us find what we are looking for<br></span></li>
-                    <li><span class="fs16lh1-5">Angelic help with Relationship<br></span></li>
-                    <li><span class="fs16lh1-5">Angelic help for your Career and Life Purpose<br></span></li>
-                    <li><span class="fs16lh1-5">Healing with Angels<br></span></li>
-                    <li><span class="fs16lh1-5">Emotional Healing<br></span></li>
-                    <li><span class="fs16lh1-5">Angels on Erath<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Invocations<br></span></li>
-                    <li><span class="fs16lh1-5">How to call Angel / Invitation to your Angel<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Ritual -Letter Writing our Guardian Angel<br></span></li>
-                    <li><span class="fs16lh1-5">Summoning the Angels<br></span></li>
-                    <li><span class="fs16lh1-5">Prayer for Exorcism<br></span></li>
-                    <li><span class="fs16lh1-5">Specific Angel Prayer<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Rosary<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Meditation<br></span></li>
-                    <li><span class="fs16lh1-5">Dreaming with Angel<br></span></li>
-                    <li><span class="fs16lh1-5">The Angelic Elevator<br></span></li>
-                    <li><span class="fs16lh1-5">Connecting With Your Angel Just Before Healing<br></span></li>
-                    <li><span class="fs16lh1-5">To have a relationship with a Healing Angel<br></span></li>
-                    <li><span class="fs16lh1-5">Crystal Angels<br></span></li>
-                    <li><span class="fs16lh1-5">How can I open wider to the Energy of my Angel/ Guide or allow them to
-                            do their
-                            work through me?<br></span></li>
-                    <li><span class="fs16lh1-5">Angelic Time<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Healing Therapy<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Message for all<br></span></li>
-                    <li><span class="fs16lh1-5">How to teach the Angel Therapy to others<br></span></li>
-                    <li><span class="fs16lh1-5">Angel Card Reading<br></span></li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-
-
-
-    <div class="contact-section set-bg" data-setbg="../img/testimonial-bg.png">
-        <!-- <div class="map-warp">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522"
-      style="border:0"
-      allowfullscreen
-    ></iframe>
-  </div> -->
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 offset-lg-6">
-                    <div class="contact-box contact-text">
-                        <div class="sp-title">
-                            <h4>Meditation Sessions</h4>
-                        </div>
-                        <p class="text-white">
-                            Etiam pretium, nibh vitae varius ultricies, tellus diam gravida
-                            elit, vel rhoncus eros eros sit amet ipsum. Cras cursus
-                            pellentesque tortor. Ut pellentesque auctor lorem, at maximus
-                            lacus faucibus nec. Interdum et malesuada fames ac ante ipsum
-                            primis in faucibus.
-                        </p>
-                        <h6>Information</h6>
-                        <ul class="text-white">
-                            <li>Main Str, no 23, New York</li>
-                            <li>+546 990221 123</li>
-                            <li>
-                                <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                                    data-cfemail="4820273b3c21262f082b27263c292b3c662b2725">[email&#160;protected]</a>
-                            </li>
-                        </ul>
-                    </div>
+          <div class="row">
+            <div class="col-lg-6 offset-lg-6">
+              <div class="contact-box contact-text">
+                <div class="sp-title">
+                  <h4>Contact us</h4>
                 </div>
+                <h5>We'd love to hear from you!</h5>
+                <p class="text-white">
+                  Whether you have a question about Reiki, Angel Healing, Tarot Card Reading, or anything else we are ready to answer all your questions.
+                  Contact us to enquire about our services.
+                </p>
+                <h6>Information</h6>
+                <ul class="text-white">
+                  <li>Mall Rd, next to Shanti Gopal Hospital, Judges Enclave, <br> Ahinsa Khand 2, Indirapuram, Ghaziabad, <br> Uttar Pradesh 201014</li>
+                  <li>+91 8368145193</li>
+                  <li>
+                    <a href="/cdn-cgi/l/email-protection" class="__cf_email__"></a>
+                  </li>
+                </ul>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
     <footer class="footer-section">
         <div class="contaienr text-center">
