--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Shatakshi Healing</title>
+  <title>Shatakshi Healing Destination |Reiki|Angel Therapy|Tarot Card"</title>
   <meta charset="UTF-8" />
   <meta name="description" content="Yoga HTML Template" />
   <meta name="keywords" content="Yoga, html" />
