--- a/services/tarot.html
+++ b/services/tarot.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Namaste - Yoga HTML Template</title>
+    <title>Tarot - Shatakshi Healing Destination</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Yoga HTML Template" />
     <meta name="keywords" content="Yoga, html" />
