added payment for angel therapy

--- a/services/angel.html
+++ b/services/angel.html
@@ -150,7 +150,7 @@
 
         </ul>
       </div>
-      <div id="registerBtn" class="register-btn">Join</div>
+      <div id="registerBtn" class='pm-button'><a href='https://www.payumoney.com/paybypayumoney/#/E60B5AA9BB1C67CEA735657288A4EA84' style="color: white;">Join</a></div> 
     </div>
   </section>
 
