updated angel therapy scheme

--- a/services/angel.html
+++ b/services/angel.html
@@ -128,29 +128,9 @@
         The various aspects to be covered in the Angel Connection and Healing workshop include the following:
       </p>
       <div id="service-detail">
-        <ul>
-
-
-          <li><span class="fs16lh1-5">Introduction to Angels, Archangels, Ascended Masters, Spiritual Guides, Dream
-              Guides & Fairies. <br></span></li>
-          <li><span class="fs16lh1-5">How to call upon Angels and Seek their help. <br></span></li>
-          <li><span class="fs16lh1-5">Communicate with the Angels <br></span></li>
-          <li><span class="fs16lh1-5">Recognizing the Signs from the Angels <br></span></li>
-          <li><span class="fs16lh1-5">Crystal & Essence Related to Individual Archangels<br></span></li>
-          <li><span class="fs16lh1-5">Angel Meditation <br></span></li>
-          <li><span class="fs16lh1-5">How to read Angel Card Reading<br></span></li>
-          <li><span class="fs16lh1-5">Working and Healing with Angels<br></span></li>
-          <li><span class="fs16lh1-5">Reiki healing with Angels <br></span></li>
-          <li><span class="fs16lh1-5">Etheric Cord Cutting <br></span></li>
-          <li><span class="fs16lh1-5">Guardian Angel Meditation <br></span></li>
-          <li><span class="fs16lh1-5">Help from angels <br></span></li>
-          <li><span class="fs16lh1-5">Automatic. writing <br></span></li>
-          <li><span class="fs16lh1-5">Tips and Techniques <br></span></li>
-          <li><span class="fs16lh1-5">Angels number <br></span></li>
-
-        </ul>
+        <ul id="angel_workshop_one"></ul>
       </div>
-      <div id="registerBtn" class='pm-button'><a href='https://www.payumoney.com/paybypayumoney/#/E60B5AA9BB1C67CEA735657288A4EA84' style="color: white;">Join</a></div> 
+      <div id="registerBtn" class='pm-button'><a href='https://www.payumoney.com/paybypayumoney/#/E60B5AA9BB1C67CEA735657288A4EA84' target='_blank' style="color: white;">Join</a></div> 
     </div>
   </section>
 
@@ -164,7 +144,9 @@
  First of all, I want to tell you healing with the Angels are one of the divine and easiest ways to manifest your desires and dreams. These healings are extremely powerful if you do it with full trust and patience. This will increase your energy and make it so powerful so that you can experience a better and faster outcome.
  In this course, you will learn each and every practical technique in detail to do healing we are going to cover 30 healing in this course which will cover all the area of your problem like health, relationship, money.
       </p>
-     
+      <div id="service-detail">
+        <ul id="angel_workshop_two"></ul>
+      </div>
       <div id="registerBtn" class="register-btn">Join</div>
     </div>
   </section>
