changed name to healings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Shatakshi Healing Destination |Reiki|Angel Therapy|Tarot Card"</title>
+  <title>Shatakshi Healings | Reiki | Angel Therapy | Tarot Card"</title>
   <meta charset="UTF-8" />
   <meta name="description" content="Yoga HTML Template" />
   <meta name="keywords" content="Yoga, html" />
@@ -53,7 +53,7 @@
         <div class="hero-content">
           <img style="height: 150px" src="img/logoLotus.png" alt="" />
           <!-- <h2>Find your inner <span>CHI</span></h2> -->
-          <h2><span>Shatakshi Healing Destination</span></h2>
+          <h2><span>Shatakshi Healings</span></h2>
           <h4>- Unit of Ardin Technology</h4>
           <br>
           <p>
@@ -77,7 +77,7 @@
         </div>
         <div class="col-lg-10">
           <p>
-            Shatakshi Healing Destination enlightening souls by spreading the
+            Shatakshi Healings enlightening souls by spreading the
             knowledge of healing therapy to masses. Taking people to higher
             dimensions of spiritual energy so as to empower them to cure their
             sufferings. When you realize the ultimate truth of life, Thousands
@@ -288,9 +288,9 @@
             <div class="sp-title">
               <h4>Trainer</h4>
             </div>
-            <img src="./img/image12.png" alt="Trainer: Savita Srivastava" />
+            <img src="./img/image12.png" alt="Trainer: Savita Srivastav" />
             <br><br>
-            <h5>Savita Srivastava</h5>
+            <h5>Savita Srivastav</h5>
             <p class="text-white">
               Reiki grandmaster, angel therapist, tarot cards reader & Angel card reader
             </p>
