--- a/services/reiki.html
+++ b/services/reiki.html
@@ -332,9 +332,9 @@
             <div class="sp-title">
               <h4>Trainer</h4>
             </div>
-            <img src="../img/image12.png" alt="Trainer: Savita Srivastava" />
+            <img src="../img/image12.png" alt="Trainer: Savita Srivastav" />
             <br><br>
-            <h5>Savita Srivastava</h5>
+            <h5>Savita Srivastav</h5>
             <p class="text-white">
               Reiki grandmaster, angel therapist, tarot cards reader & Angel card reader
             </p>
