--- a/services/angel.html
+++ b/services/angel.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-  <title>Angel Therapy - Shatakshi Healing Destination</title>
+  <title>Angel Therapy - Shatakshi Healings</title>
   <meta charset="UTF-8" />
   <meta name="description" content="Yoga HTML Template" />
   <meta name="keywords" content="Yoga, html" />
@@ -171,9 +171,9 @@
             <div class="sp-title">
               <h4>Trainer</h4>
             </div>
-            <img src="../img/image12.png" alt="Trainer: Savita Srivastava" />
+            <img src="../img/image12.png" alt="Trainer: Savita Srivastav" />
             <br><br>
-            <h5>Savita Srivastava</h5>
+            <h5>Savita Srivastav</h5>
             <p class="text-white">
               Reiki grandmaster, angel therapist, tarot cards reader & Angel card reader
             </p>
