--- a/services/zibu.html
+++ b/services/zibu.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Zibu Angelic Symbols - Shatakshi Healing Destination</title>
+    <title>Zibu Angelic Symbols - Shatakshi Healings</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Yoga HTML Template" />
     <meta name="keywords" content="Yoga, html" />
@@ -135,9 +135,9 @@
                 <div class="sp-title">
                   <h4>Trainer</h4>
                 </div>
-                <img src="../img/image12.png" alt="Trainer: Savita Srivastava" />
+                <img src="../img/image12.png" alt="Trainer: Savita Srivastav" />
                 <br><br>
-                <h5>Savita Srivastava</h5>
+                <h5>Savita Srivastav</h5>
                 <p class="text-white">
                   Reiki grandmaster, angel therapist, tarot cards reader & Angel card reader
                 </p>
